# meshara

./: .clippy.toml  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  idea.txt  rustfmt.toml
.claude/agents/: documentation-maintainer.md
.github/workflows/: ci.yml
benches/: crypto_bench.rs
docs/api/: authority.md  events.md  messaging.md  node.md
docs/architecture/: cryptography.md  message-flow.md  networking.md  overview.md  protocol-versioning.md  routing.md
docs/guides/: configuration.md  examples.md  getting-started.md  testing.md
docs/security/: best-practices.md  cryptographic-design.md  threat-model.md
examples/: chat_app.rs  simple_messaging.rs  software_updates.rs
examples/chat_app/: Cargo.toml  README.md  run_test.sh
examples/chat_app/src/: chat.rs  main.rs  ui.rs
examples/chat_app/tests/: integration_test.rs
examples/simple_messaging/: Cargo.toml  README.md
examples/simple_messaging/src/: alice.rs  bob.rs
examples/simple_messaging/tests/: integration_test.rs
mvp/: overview.txt
mvp/phase-1/: 01-cryptography.txt  02-protocol-buffers.txt  03-storage.txt  04-error-handling.txt  05-testing-infrastructure.txt  06-protocol-versioning.txt
mvp/phase-2/: 01-node-api.txt  02-message-construction.txt
mvp/phase-3/: 01-tls-networking.txt  02-peer-discovery.txt
mvp/phase-4/: 01-routing-basics.txt  02-dht-integration.txt
mvp/phase-5/: 01-authority-nodes.txt  02-update-distribution.txt
post-mvp/: README.txt  overview.txt
post-mvp/phase-1/: 01-security-audit.txt  02-fuzzing-infrastructure.txt  03-performance-benchmarking.txt  04-reliability-engineering.txt  05-memory-safety.txt
post-mvp/phase-2/: 01-onion-routing.txt  02-mobile-sdks.txt
post-mvp/phase-3/: 01-language-bindings.txt  02-developer-tooling.txt
post-mvp/phase-4/: 01-observability.txt
post-mvp/phase-5/: 01-ecosystem.txt
post-mvp/phase-6/: 01-sustainability.txt
proto/: messages.proto
src/: error.rs  lib.rs
src/api/: config.rs  events.rs  mod.rs  node.rs  registry.rs
src/authority/: application.rs  distribution.rs  keys.rs  mod.rs  queries.rs  trust.rs  updates.rs
src/crypto/: encryption.rs  hash.rs  keys.rs  mod.rs  signing.rs
src/network/: connection.rs  discovery.rs  mod.rs  tls.rs
src/protocol/: meshara.rs  messages.rs  mod.rs  versioning.rs
src/routing/: dht.rs  forwarding.rs  gossip.rs  mod.rs  router.rs  routing_table.rs
src/storage/: backend.rs  config.rs  keystore.rs  mod.rs
tests/: integration_tests.rs  network_tls_tests.rs  protocol_versioning_tests.rs
tests/common/: mod.rs
