[package]
name = "meshara"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["sebi <sebastian@venom.is>"]
license = "MIT"
description = "A developer-friendly library for decentralized, privacy-preserving communication"
homepage = "https://github.com/sebyx07/meshara"
repository = "https://github.com/sebyx07/meshara"
documentation = "https://docs.rs/meshara"
readme = "README.md"
keywords = ["p2p", "privacy", "encryption", "decentralized", "networking"]
categories = ["network-programming", "cryptography", "asynchronous"]

[lib]
name = "meshara"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"], optional = true }
async-std = { version = "1.12", optional = true }

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
blake3 = "1.5"
rand = "0.8"
zeroize = "1.7"

# Protocol Buffers
prost = "0.12"
prost-types = "0.12"

# Networking
tokio-rustls = { version = "0.25", optional = true }
rustls = "0.22"
rustls-pemfile = "2.0"
webpki-roots = "0.26"

# HTTP/2 (optional)
h2 = { version = "0.4", optional = true }

# Discovery
mdns-sd = { version = "0.10", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes = "1.5"
futures = "0.3"
parking_lot = "0.12"
dashmap = "5.5"

# Storage
sled = { version = "0.34", optional = true }

# Metrics (optional)
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"

[build-dependencies]
prost-build = "0.12"

[features]
default = ["tokio-runtime", "tls", "local-discovery"]

# Runtime
tokio-runtime = ["tokio", "tokio-rustls"]
async-std-runtime = ["async-std"]

# Core features
tls = ["tokio-rustls"]
local-discovery = ["mdns-sd"]

# Optional features
onion-routing = []
dht = []
http2-framing = ["h2"]
domain-fronting = []
metrics = ["prometheus"]
persistent-storage = ["sled"]

# Development only
dev-mode = []

[[example]]
name = "simple_messaging"
path = "examples/simple_messaging.rs"

[[example]]
name = "software_updates"
path = "examples/software_updates.rs"

[[example]]
name = "chat_app"
path = "examples/chat_app.rs"

[[bench]]
name = "crypto_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
lto = true
