[package]
name = "meshara"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["sebi <sebastian@venom.is>"]
license = "MIT"
description = "A developer-friendly library for decentralized, privacy-preserving communication"
homepage = "https://github.com/sebyx07/meshara"
repository = "https://github.com/sebyx07/meshara"
documentation = "https://docs.rs/meshara"
readme = "README.md"
keywords = ["p2p", "privacy", "encryption", "decentralized", "networking"]
categories = ["network-programming", "cryptography", "asynchronous"]

[lib]
name = "meshara"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"], optional = true }
smol = { version = "2.0", optional = true }

# Cryptography - RustCrypto suite (audited, widely trusted)
# Digital signatures (Ed25519)
ed25519-dalek = { version = "2.1", features = ["rand_core", "hazmat"] }
# Key exchange (X25519)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
# Authenticated encryption (ChaCha20-Poly1305)
chacha20poly1305 = "0.10"
# Hashing (BLAKE3)
blake3 = "1.8"
# Random number generation
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
# Secure memory handling
zeroize = { version = "1.8", features = ["derive"] }
# Key derivation function (Argon2)
argon2 = { version = "0.5", features = ["std"] }

# Protocol Buffers
prost = "0.14"
prost-types = "0.14"

# Networking - Rustls (modern, safe TLS)
tokio-rustls = { version = "0.26", optional = true }
rustls = "0.23"
rustls-pki-types = { version = "1.10", features = ["std"] }
webpki-roots = "1.0"

# HTTP/2 (optional)
h2 = { version = "0.4", optional = true }

# Discovery
mdns-sd = { version = "0.17", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes = "1.9"
futures = "0.3"
parking_lot = "0.12"
dashmap = "6.1"

# Storage
redb = { version = "3.1", optional = true }

# Metrics (optional)
prometheus = { version = "0.14", optional = true }

[dev-dependencies]
criterion = "0.8"
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"

[build-dependencies]
prost-build = "0.14"

[features]
default = ["tokio-runtime", "tls", "local-discovery"]

# Runtime
tokio-runtime = ["tokio", "tokio-rustls"]
smol-runtime = ["smol"]

# Core features
tls = ["tokio-rustls"]
local-discovery = ["mdns-sd"]

# Optional features
onion-routing = []
dht = []
http2-framing = ["h2"]
domain-fronting = []
metrics = ["prometheus"]
persistent-storage = ["redb"]

# Development only
dev-mode = []

[[example]]
name = "simple_messaging"
path = "examples/simple_messaging.rs"

[[example]]
name = "software_updates"
path = "examples/software_updates.rs"

[[example]]
name = "chat_app"
path = "examples/chat_app.rs"

[[bench]]
name = "crypto_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
lto = true
