[package]
name = "meshara-simple-messaging"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alice"
path = "src/alice.rs"

[[bin]]
name = "bob"
path = "src/bob.rs"

[dependencies]
meshara = { path = "../..", features = ["default", "local-discovery"] }
tokio = { version = "1.48", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.15"
